test/errors/parse/expected_name.ty
for 3 in 0..4 {
	print("hello, world")
}